--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "discord.js": "12.2.0",
     "dotenv": "8.2.0",
-    "util": "0.12.3"
+    "util": "0.12.3",
+    "axios": "0.19.2"
   }
 }
